--- a/package.json
+++ b/package.json
@@ -10,18 +10,50 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-client": "^2.6.8",
+    "apollo-link": "^1.2.13",
+    "apollo-link-context": "^1.0.19",
+    "apollo-link-error": "^1.1.12",
+    "apollo-link-http": "^1.5.16",
+    "cross-fetch": "^3.0.4",
+    "graphql": "^14.6.0",
+    "graphql-tag": "^2.10.2",
+    "i18next": "^19.1.0",
     "jetifier": "^1.6.5",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.27",
+    "prop-types": "^15.7.2",
     "react": "16.9.0",
-    "react-native": "0.61.5"
+    "react-i18next": "^11.3.1",
+    "react-native": "0.61.5",
+    "react-native-i18n": "^2.0.15",
+    "react-redux": "^7.1.3",
+    "redux-actions": "^2.6.5",
+    "redux-persist": "^6.0.0",
+    "styled-components": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^0.0.7",
+    "babel-eslint": "^10.0.3",
     "babel-jest": "^25.1.0",
+    "babel-preset-react-native": "^4.0.1",
     "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-import": "^0.13.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react-hooks": "^2.3.0",
+    "eslint-plugin-react-native": "^3.8.1",
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.58.0",
+    "prettier": "^1.19.1",
     "react-test-renderer": "16.9.0"
   },
   "jest": {
