--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
+    "@react-native-community/async-storage": "^1.7.1",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
     "apollo-link": "^1.2.13",
@@ -30,6 +31,7 @@
     "react-native": "0.61.5",
     "react-native-i18n": "^2.0.15",
     "react-redux": "^7.1.3",
+    "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.0.0"
