--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
     }
   },
   "rules": {
+    "no-unused-vars": "error",
     "prefer-destructuring": "off",
     "react/jsx-filename-extension": "off",
     "import/prefer-default-export": "off",
