--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "moment-timezone": "^0.5.27",
     "prop-types": "^15.7.2",
     "react": "16.9.0",
+    "react-apollo": "^3.1.3",
     "react-i18next": "^11.3.1",
     "react-native": "0.61.5",
     "react-native-i18n": "^2.0.15",
