--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-persist": "^6.0.0",
+    "rn-tooltip": "^2.0.0",
     "styled-components": "^5.0.0"
   },
   "devDependencies": {
