--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
     "@react-native-community/async-storage": "^1.7.1",
+    "@react-native-community/datetimepicker": "^2.2.1",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
     "apollo-link": "^1.2.13",
@@ -31,6 +32,7 @@
     "react-i18next": "^11.3.1",
     "react-native": "0.61.5",
     "react-native-i18n": "^2.0.15",
+    "react-native-vector-icons": "^6.6.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
