--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-i18next": "^11.3.1",
     "react-native": "0.61.5",
     "react-native-i18n": "^2.0.15",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-vector-icons": "^6.6.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
