--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -182,6 +182,8 @@ dependencies {
     implementation project(':react-native-vector-icons')
     implementation project(':@react-native-community_datetimepicker')
     implementation project(':react-native-splash-screen')
+    implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0-alpha02'
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
