--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@apollo/react-hooks": "^3.1.3",
     "@react-native-community/async-storage": "^1.7.1",
     "@react-native-community/datetimepicker": "^2.2.1",
+    "@react-native-community/masked-view": "^0.1.6",
+    "@react-navigation/native": "^5.0.0",
+    "@react-navigation/stack": "^5.0.0",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
     "apollo-link": "^1.2.13",
@@ -31,7 +34,11 @@
     "react-apollo": "^3.1.3",
     "react-i18next": "^11.3.1",
     "react-native": "0.61.5",
+    "react-native-gesture-handler": "^1.5.6",
     "react-native-i18n": "^2.0.15",
+    "react-native-reanimated": "^1.7.0",
+    "react-native-safe-area-context": "^0.6.4",
+    "react-native-screens": "^2.0.0-beta.2",
     "react-native-splash-screen": "^3.2.0",
     "react-native-vector-icons": "^6.6.0",
     "react-redux": "^7.1.3",
