--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "apollo-link-error": "^1.1.12",
     "apollo-link-http": "^1.5.16",
     "cross-fetch": "^3.0.4",
+    "formik": "^2.1.3",
     "graphql": "^14.6.0",
     "graphql-tag": "^2.10.2",
     "i18next": "^19.1.0",
@@ -46,7 +47,8 @@
     "redux-actions": "^2.6.5",
     "redux-persist": "^6.0.0",
     "rn-tooltip": "^2.0.0",
-    "styled-components": "^5.0.0"
+    "styled-components": "^5.0.0",
+    "yup": "^0.28.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
